# s3_navigator_streamlit

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: collabs.csv
src/: app.py
